<resources>
    <string name="app_name">FINAL_ANDROID_PROJECT</string>
    <string name="loginbtn">LOGIN</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="enterusername">enter username ...</string>
    <string name="enterpass">enter Pass...</string>
    <string name="registerbtn">Register</string>
    <string name="dashboard">dashboard</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="contacts">Contacts</string>
    <string name="weather">Weather</string>
    <string name="email">Email</string>
</resources>