<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_vector"
            android:title="@string/profile"/>



        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contacts_vector"
            android:title="@string/contacts" />


        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather_vector"
            android:title="@string/weather" />


        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/email_vector"
            android:title="@string/email" />
    </group>
</menu>