<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.final_android_project.ui.Profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.final_android_project.ui.Contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />


    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.final_android_project.ui.Weather.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />


    <fragment
        android:id="@+id/nav_email"
        android:name="com.example.final_android_project.ui.Email.EmailFragment"
        android:label="@string/email"
        tools:layout="@layout/fragment_email" />
</navigation>